-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.8.2, 5.0.0 Beta 1
-
None
-
Microsoft Windows 7 Ultimate 64-bit
-
Qt4.8: d8cc750c58d6e710c821868a2456c2b0a8b0dbbc, Qt5.0: 952ea029f40aaff9de0101fc165907ef8693e4aa
If a QWizard is shown when Aero is enabled, the current visual style is cached in a static member of QVistaHelper. The cached state is updated by QVistaHelper when it receives WM_THEMECHANGED or WM_DWMCOMPOSITIONCHANGED events from Windows.
If all QWizard instances are destroyed, there are no instances of QVistaHelper to receive these notifications and update the cache. If Aero is now disabled, the cached current visual style in QVistaHelper isn't updated. If a wizard is now created and shown, a large black rectangle is shown in the titlebar.
For Gerrit Dashboard: QTBUG-27004 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
34062,1 | QWizard/Win: Fix incorrect cached state after all wizards destroyed | master | qt/qtbase | Status: MERGED | +2 | 0 |
34103,1 | QWizard/Win: Fix incorrect cached state after all wizards destroyed | 4.8 | qt/qt | Status: MERGED | +2 | 0 |